--- a/view/Screen1ReviewPage.fragment.xml
+++ b/view/Screen1ReviewPage.fragment.xml
@@ -68,6 +68,9 @@
 								<Text text="Yabancı Dil"/>
 							</Column>
 							<Column width="12em">
+								<Text text="Sınav Tipi"/>
+							</Column>
+							<Column width="12em">
 								<Text text="Puan"/>
 							</Column>
 							<Column width="12em">
@@ -91,6 +94,7 @@
 								<cells>
 									<Text text="{Spras}"/>
 									<Text text="{Sptxt}"/>
+									<Text text="{SinavTipi}"/>
 									<Text text="{Puan}"/>
 									<Text text="{SinavTarihi}"/>
 									<Text text="{Yazma}"/>
