--- a/view/Screen1.view.xml
+++ b/view/Screen1.view.xml
@@ -138,6 +138,9 @@
 										<Text text="Yabancı Dil"/>
 									</Column>
 									<Column width="12em">
+										<Text text="Sınav Tipi"/>
+									</Column>
+									<Column width="12em">
 										<Text text="Puan"/>
 									</Column>
 									<Column width="12em">
@@ -161,6 +164,7 @@
 										<cells>
 											<Text text="{Spras}"/>
 											<Text text="{Sptxt}"/>
+											<Text text="{SinavTipi}"/>
 											<Text text="{Puan}"/>
 											<Text text="{SinavTarihi}"/>
 											<Text text="{Yazma}"/>
