--- a/view/Screen3.view.xml
+++ b/view/Screen3.view.xml
@@ -201,8 +201,8 @@
 								</items>
 							</Table>
 						</WizardStep>
-						<WizardStep id="idBeceri" validated="true" activate="stepAbility" title="Zihinsel Beceri">
-							<Table growing="true" growingThreshold="10" id="idAbilityTable3" inset="false" items="{ path: '/results'}"
+						<WizardStep id="PricingStep" activate="pricingActivate" complete="pricingComplete" validated="true" title="Zihinsel Beceri">
+								<Table growing="true" growingThreshold="10" id="idAbilityTable3" inset="false" items="{ path: '/results'}"
 								mode="SingleSelectMaster" selectionChange="onPressZihin">
 								<headerToolbar>
 									<OverflowToolbar id="otbSubheader1">
@@ -227,37 +227,6 @@
 											<Text text="{SinavTuru}"/>
 											<Text text="{Puan}"/>
 											<Text text="{SinavTarihi}"/>
-										</cells>
-									</ColumnListItem>
-								</items>
-							</Table>
-						</WizardStep>
-						<WizardStep id="PricingStep" activate="pricingActivate" complete="pricingComplete" validated="true" title="PD Sonuçları">
-							<Table growing="true" growingThreshold="10" id="idPDTable3" inset="false" items="{ path: '/results' }"
-								mode="SingleSelectMaster" selectionChange="onPressPD">
-								<headerToolbar>
-									<OverflowToolbar>
-										<ToolbarSpacer/>
-										<Button text="Ekle" type="Emphasized" press="onAddPD"/>
-									</OverflowToolbar>
-								</headerToolbar>
-								<columns>
-									<Column width="12em">
-										<Text text="Tarih"/>
-									</Column>
-									<Column width="12em">
-										<Text text="Sonuç"/>
-									</Column>
-									<Column width="12em">
-										<Text text="Puan"/>
-									</Column>
-								</columns>
-								<items>
-									<ColumnListItem>
-										<cells>
-											<Text text="{path: 'Pdyear' , formatter: '.vDate'}"/>
-											<Text text="{Pdsonuc}"/>
-											<Text text="{Pdpuan}"/>
 										</cells>
 									</ColumnListItem>
 								</items>
