--- a/view/Screen6.view.xml
+++ b/view/Screen6.view.xml
@@ -13,7 +13,7 @@
 									<Label text="Fiş Konusu"/>
 									<Input class="inputForm" value="Ücret Değişikliği" enabled="false" id="fisKonu6"/>
 									<Label text="Sicil No"/>
-									<SearchField class="inputForm" width="50%" placeholder="Ara" search="handleSicilNoSearch" id="sicilNo6"/>
+									<SearchField class="inputForm" width="50%" placeholder="Ara" search="onSearchSicil6" id="sicilNo6"/>
 									<Label text="Ad Soyad"/>
 									<Input class="inputForm" value="" enabled="false" id="adSoyad6"/>
 									<core:Title/>
